--- a/medical-information.html
+++ b/medical-information.html
@@ -39,6 +39,81 @@
             <small class="year">YYYY</small>
         </p>
     </div>
+    <hr>
+    <h2>Emergency Contact</h2>
+    <div>
+        <p>
+            <legend>Name</legend>
+            <input id="firstname-emergency-contact" name="firstname-emergency-contact" type="text" size="10">
+            <input id="lastname-emergency-contact" name="lastname-emergency-contact" type="text" size="15">
+        </p>
+        <p>
+            <legend>Relationship</legend>
+            <input id="relationship" name="relationship" type="text">
+        </p>
+        <p>
+            <small>First</small>
+            <small class="last">Last</small>
+        </p>
+        <p>
+            <legend>Address</legend>
+            <input name="address1" id="address1" type="text">
+            <label for="address1">Street Address</label>
+        </p>
+        <p>
+            <input name="address2" id="address2" type="text">
+            <label for="address2">Address Line 2</label>
+        </p>
+        <p>
+            <input name="city" id="city" type="text">
+            <label for="city">City</label>
+        </p>
+        <p>
+            <input name="state-province-region" id="state-province-region" type="text">
+            <label for="state-province-region">State / Province / Region</label>
+        </p>
+        <p>
+            <input name="postal-zip-code" id="postal-zip-code" type="text">
+            <label for="postal-zip-code">Postal / Zip Code</label>
+        </p>
+        <p >
+            <select name="country" id="country">
+                <option disabled selected value=" "></option>
+                <option value="belgium">Belgium</option>
+                <option value="netherlands">Netherlands</option>
+                <option value="france">France</option>
+                <option value="germany">Germany</option>
+                <option value="unitedkingdom">United Kingdom</option>
+            </select>
+            <label for="country">Country</label>
+        </p>
+        <p>
+            <legend>Home Phone</legend>
+            <input type="text" name="worktel1" size="3">
+            -
+            <input type="text" name="worktel2" size="3">
+            -
+            <input type="text" name="worktel3" size="4">
+        </p>
+        <p>
+            <small>###</small>
+            <small class="tel2">###</small>
+            <small class="tel3">####</small>
+        </p>
+        <p >
+            <legend>Work Phone</legend>
+            <input type="text" name="worktel1" size="3">
+            -
+            <input type="text" name="worktel2" size="3">
+            -
+            <input type="text" name="worktel3" size="4">
+        </p>
+        <p class="f2-13">
+            <small>###</small>
+            <small class="tel2">###</small>
+            <small class="tel3">####</small>
+        </p>
+    </div>
 </form>
  </body>
 </html>
